--- a/core/src/main/res/layout/activity_detail_movie.xml
+++ b/core/src/main/res/layout/activity_detail_movie.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.capstone.submissionexpertone.detail.DetailMovieActivity">
+    tools:context="com.capstone.submissionexpertone.detail.">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbar"
